--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+/*Header*/
+.Expense-Header{
+  background-color: aqua;
+}
+
+.button-container{
+  display:flex;
+  align-items: center;
+  
+}
