--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,69 @@
+/* * {
+  border: 1px solid red;
+} */
+
+#root {
+  background-color: rgb(168, 251, 223);
+}
+
+h1 {
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h5 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.submit {
+  background-color: rgb(97, 202, 202);
+  border-radius: 5px;
+  border: none;
+  margin-left: 10px;
+}
+
+.delete {
+  background-color: rgb(238, 68, 11);
+  border-radius: 5px;
+  border: none;
+  margin-left: 10px;
+}
+
+.signout {
+  background-color: rgb(49, 235, 235);
+  margin: 10px;
+  border-radius: 5px;
+  border: groove black;
+}
+
+.button:hover {
+  border: solid #282c34;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+  margin: 5px;
+}
+
+input {
+  border-radius: 5px;
+  border: 10px;
+  margin: 10px;
+}
+
+p {
+  text-align: center;
+  font-weight: bold;
+}
+
 .App {
   text-align: center;
 }
@@ -39,17 +105,12 @@
 
 /*Header*/
 .Expense-Header{
-  background-color: aqua;
+  background-color: rgb(0, 115, 104)
 }
 
-.button-container{
-  display:flex;
-  align-items: center;
-  
-}
 
 .table{
-  background-color: bisque;
+  background-color: rgb(196, 250, 250);
 }
 
 /*Auth*/
@@ -60,16 +121,17 @@
 }
 
 .auth-container-box {
-width: 500px;
+width: 300px;
 border-radius: 10px;
 overflow: hidden;
-box-shadow: rgba(0,0,0,0.5) 0 6px 24px, rgba(0,0,0,0.08) 0 0 0 1px;
+box-shadow: rgba(228, 221, 221, 0.5) 0 6px 24px, rgba(0,0,0,0.08) 0 0 0 1px;
+background-color: rgb(199, 225, 233);
 }
 
 .auth-container-box form {
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 200px;
   padding: 20px;
 }
 
@@ -81,5 +143,5 @@ box-shadow: rgba(0,0,0,0.5) 0 6px 24px, rgba(0,0,0,0.08) 0 0 0 1px;
   width: 50%;
   border: none;
   padding: 10px;
-  color: rgb(35, 38, 47);
+  color: rgb(15, 25, 62);
 }
